--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -122,7 +122,7 @@
         .navbar-brand{ 
             padding-top: 39px;
             img{
-                max-width: 100%; 
+                max-width: 130px; 
             }
         }
     }
